# FASTRIDDLER

./: README.md  TODO  payload-packer.py  pyproject.toml
src/fastriddler/: payload_packer.py
tests/: test_application.py  test_argumentparser.py
