[tool.poetry]
name = "fastriddler"
version = "0.1.0"
description = "An exploitation framework"
license = "GPLv3"
readme="README.md"
repository="https://github.com/darkwhirlwind/FASTRIDDLER"
authors = ["DarkWhirlwind <email@mail.mail>"]
keywords=["exploitation"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = ">=5.4.2"
mypy   = ">=0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
